# multiplierless-cpp

./: .clang-tidy.bak  .gitignore  .gitpod.yml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_8md.html  ThreadPool_8h.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classLowpassOracle-members.html  classLowpassOracle.html  classLowpassOracleQ-members.html  classLowpassOracleQ.html  classOptions.html  classThreadPool.html  classcsdlowpass__oracle.html  classes.html  classlowpass__oracle.html  classmultiplierless_1_1_multiplierless.html  classnumeric_1_1matrix2.html  classnumeric_1_1vector2.html  csdlowpass__oracle_8hpp.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_514c6df779b0020705791a0d759f07ea.html  document-dev.yml  environment-dev.yml  fftw__helper_8hpp.html  fftw__helper_8hpp__incl.map  fftw__helper_8hpp__incl.md5  fftw__helper_8hpp_source.html  files.html  fir_design_input.schema.json  fir_design_output.example.json  fir_design_output.schema.json  fir_design_output_cpp.json  (+68 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.bak  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: FindFFTW.cmake  OpenBLASConfig.cmake
docs/: TUTORIAL.md  TUTORIAL_CN.md
documentation/: CMakeLists.txt  conf.py
include/multiplierless/: csdlowpass_oracle.hpp  fftw_helper.hpp  greeter.h  logger.hpp  lowpass_oracle.hpp  lowpass_oracle_q.hpp  matrix2.hpp  matrix2.tpp  rootfinding.hpp  rootfinding.tpp  vector2.hpp  vector2.tpp
search/: all_0.js  all_11.js  all_13.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_1.js  namespaces_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
source/: csd.cpp  csdlowpass_oracle.cpp  greeter.cpp  logger.cpp  lowpass_oracle.cpp  lowpass_oracle_q.cpp  rootfinding.cpp  rootfinding.tpp  spectral_fact.cpp
standalone/: CMakeLists.txt
standalone/source/: fir_design.cpp  logger_example.cpp  main.cpp
test/: CMakeLists.txt
test/source/: greeter.old  main.cpp  test_csd.cpp  test_csd_quantize.cpp  test_csdlowpass.cpp  test_extra.cpp  test_filter_construct.cpp  test_integers.cpp  test_lowpass.cpp  test_lowpass.py  test_lowpass_q.cpp  test_lowpass_q_active.cpp  test_oracle_branches.cpp  test_rapidcheck.cpp  test_rootfinding.cpp  test_rootfinding.tpp  test_spectral_fact.cpp  test_spectral_fact_caching.cpp  test_spectral_fact_root.cpp
test_installed/: CMakeLists.txt
tools/: convert_slides.py  discrete-optim-slides.md  extract_verilog.py  fix_verilog_ports.py  multiplierless-FIR-slides.md  verify_filter.py  verify_filter_v1_float.py
